dev-deploy/backend-netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: blog-prod
spec:
  podSelector:
    matchLabels:
      app: backend-prod 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-prod 
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: blog-prod
spec:
  podSelector:
    matchLabels:
      app: backend-prod 
  policyTypes:
  - Egress
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: frontend-prod
    ports:
      - protocol: TCP
        port: 4321
